# mod_proxy_msrpc

./: .gitignore  Makefile.in  README.pod  TODO  configure  configure.ac  mod_proxy_msrpc.c  msrpc_pdu_parser.h  msrpc_sync.c  msrpc_sync.h
debian/: apache2  changelog  control  copyright  docs  proxy_msrpc.load  rules  watch
debian/patches/: series  upstream-big-endian-patch.diff
debian/tests/: control  debian-swirl.txt  ordinary-http-request  ordinary-http-request.htt  reverse-proxy-request  reverse-proxy-request.conf  reverse-proxy-request.htt  save-logs
src/: Makefile.in  mod_proxy_msrpc.c  msrpc_pdu_parser.c  msrpc_pdu_parser.h  msrpc_pdu_private.h  msrpc_sync.c
test/: Makefile  Makefile.in  check_msrpc_pdu_parser.c  check_msrpc_sync.c
